# Floaty-McFloatFace

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  cursor.html  editor.html  keyboard.html  package.json  recording.html  region.html  settings.html  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: README.zh-CN.md
scripts/: bump.sh  post-build-sign.sh
src/: App.tsx  cursor-main.tsx  editor-main.tsx  keyboard-main.tsx  main.tsx  recording-main.tsx  region-main.tsx  settings-main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: events.rs  keyboard.rs  lib.rs  main.rs
src-tauri/src/keyboard/: macos.rs  mod.rs
src-tauri/src/recording/: mod.rs  store.rs
src/components/editor/: PlaybackBar.tsx
src/components/ui/: button.tsx  card.tsx  label.tsx  select.tsx  slider.tsx  switch.tsx
src/hooks/: useRecordingPipeline.test.ts  useRecordingPipeline.ts  useRecordingRemote.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/lib/: camera.ts  coords.test.ts  coords.ts  disableContextMenu.ts  events.ts  exportVideo.test.ts  exportVideo.ts  sanity.test.ts  tauri.ts  theme.ts
src/types/: app.ts
src/windows/: CursorOverlayWindow.tsx  EditorWindow.tsx  KeyboardWindow.tsx  MainCameraWindow.tsx  RecordingControlWindow.tsx  RegionSelectWindow.tsx  SettingsWindow.tsx
