[package]
name = "floaty-mcfloatface"
version = "0.2.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "floaty_mcfloatface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
